# predictive-maintenance-rul

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/baseline_fd001_w30/: feature_cols.json  metrics.json
data/processed/cmapss/: rul_FD001.csv  schema_FD001.json  train_FD001.parquet
demo_assets/baseline_fd001_w30/: model.joblib  run_metadata.json
demo_assets/baseline_fd001_w30/exports/: alerts_FD001.csv
demo_assets/cmapss/: test_FD001.parquet
docs/: MODEL_CARD.md
scripts/: ingest_cmapss.py  run_dashboard.py  train_baseline.py
src/pm_rul/: __init__.py  __main__.py  artifacts.py  cli.py  cmapss_ingest.py  dashboard.py  explain.py  features.py  model_card.py  modeling.py
src/predictive_maintenance_rul.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: helpers.py  test_features.py  test_modeling.py  test_smoke.py  test_split.py
