[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "predictive-maintenance-rul"
version = "0.1.0"
description = "Predictive maintenance RUL using NASA CMAPSS"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
pm-rul = "pm_rul.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
